Prevent horizontal scrollbar

--- a/docs/source/_static/docson/css/docson.css
+++ b/docs/source/_static/docson/css/docson.css
@@ -478,3 +478,8 @@
     font-style: italic;
 }
 
+/* Overrides */
+
+.docson .box {
+    width: 96% !important;
+}
